--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ footer {
 <section>
   <h2>About Me</h2>
   <p class="about">
-    DevOps Engineer with 4+ years of experience in building, automating,
+    DevOps Engineer with 3 years of experience in building, automating,
     and deploying scalable applications. Strong hands-on experience
     with cloud infrastructure, containers, CI/CD pipelines, and monitoring.
   </p>
@@ -168,7 +168,6 @@ footer {
     <div class="skill">Jenkins</div>
     <div class="skill">GitHub Actions</div>
     <div class="skill">Terraform</div>
-    <div class="skill">Ansible</div>
     <div class="skill">Linux</div>
     <div class="skill">Bash</div>
     <div class="skill">Nginx</div>
@@ -215,9 +214,9 @@ footer {
 
 <section class="contact">
   <h2>Contact</h2>
-  <a href="mailto:hardik@example.com">hardik@example.com</a>
+  <a href="mailto:hardiksharmatik@gmail.com">hardiksharmatik@gmail.com</a>
   <a href="https://github.com/hardiksharma1998">GitHub</a>
-  <a href="https://linkedin.com">LinkedIn</a>
+  <a href="https://www.linkedin.com/in/hardiksharmadevops/">LinkedIn</a>
 </section>
 
 <footer>
