--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@ footer {
 <section>
   <h2>About Me</h2>
   <p class="about">
-    DevOps Engineer with 3 years of experience in building, automating,
-    and deploying scalable applications. Strong hands-on experience
-    with cloud infrastructure, containers, CI/CD pipelines, and monitoring.
+   DevOps Engineer with 3 years of experience in designing, deploying, and managing scalable cloud infrastructure.
+Strong expertise in AWS, Docker, Kubernetes, CI/CD automation, Linux administration, and Infrastructure as
+Code. Proven ability to automate deployments, improve system reliability, and collaborate with development
+teams to deliver secure, high-availability applications.
   </p>
 </section>
 
