--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ footer {
 <body>
 
 <header>
-  <h1>Hardik</h1>
+  <h1>Hardik Sharma</h1>
   <p>DevOps Engineer • AWS • Docker • Kubernetes • CI/CD</p>
 </header>
 
